# Concepts-of-Programming-Language-Design

./: README.md
Assignment 0/: Infix.hs  Lambda.hs  RPN.hs
Assignment 1/: minhs1.cabal  run_tests_cabal.cmd  run_tests_stack.cmd
Assignment 1/.stack-work/: stack.sqlite3
Assignment 1/.stack-work/ghci/55499498/: cabal_macros.h
Assignment 1/MinHS/: Env.hi  Evaluator.hs  Parse.hi  Syntax.hi  TypeChecker.hi
Assignment 1/tests/driver/: Check.hs
Assignment 1/tests/tests1/task2/: 000.mhs  001.mhs
Assignment 1/tests/tests1/task3/: 000.mhs  001.mhs
Assignment 1/tests/tests1/task4/: 000.mhs  001.mhs
Assignment 1/tests/tests1/task5/: 000.mhs  001.mhs
Assignment 1/tests/tests1/task6/: 000.mhs  000.out
Assignment 1/tests/tests2/task2/: 000.mhs  001.mhs  002.mhs  003.mhs  004.mhs  005.mhs  006.mhs  007.mhs  008.mhs  009.mhs  010.mhs  011.mhs  012.mhs  013.mhs  014.mhs  015.mhs  015.out  016.mhs  016.out  017.mhs  017.out  018.mhs  019.mhs  020.mhs  021.mhs  022.mhs
Assignment 1/tests/tests2/task3/: 000.mhs  001.mhs  002.mhs  003.mhs  004.mhs  005.mhs  006.mhs  007.mhs  007.out  008.mhs  009.mhs  010.mhs
Assignment 1/tests/tests2/task4/: 000.mhs  001.mhs  002.mhs  003.mhs  004.mhs  004.out  005.mhs  006.mhs
Assignment 1/tests/tests2/task5/: 000.mhs  001.mhs  002.mhs  003.mhs  004.mhs  005.mhs  006.mhs  007.mhs  008.mhs  009.mhs  010.mhs  011.mhs  011.out
Assignment 1/tests/tests2/task6/: 001.mhs  002.mhs  003.mhs  004.mhs  005.mhs  006.mhs  007.mhs  009.mhs  010.mhs  010.out  011.mhs
